Fix typos and update documentation

--- a/init/src/styles.scss
+++ b/init/src/styles.scss
@@ -1,4 +1,12 @@
 body {
     text-align: center;
-    padding: 200px 50px;
+    padding-top: 200px;
+
+    background-image: url(./images/icon.png?as=webp&height=190);
+    background-repeat: no-repeat;
+    background-position: center 20px;
+}
+
+ul {
+    list-style: none;
 }
